# russia-historical-climate

./: README.md  pyproject.toml
pipeline-automation/: config.yaml
pipeline-automation/infrastructure/: main.tf
pipeline-automation/infrastructure/modules/glue/: jobs.tf
pipeline-automation/infrastructure/modules/iam/: roles.tf  user.tf
pipeline-automation/infrastructure/modules/quicksight/: data_source.tf  main.tf
pipeline-automation/infrastructure/modules/redshift/: main.tf
pipeline-automation/infrastructure/modules/s3/: main.tf
pipeline-automation/infrastructure/modules/step/: main.tf
pipeline-automation/quicksight/: monthly-agg-data-template-definition.json  state-yearly-stations-template-definition.json
pipeline-automation/scripts/: map_stations_glue.py  metadata_to_redshift.py  process_by_year.py  upload_to_s3.sh
pipeline-automation/sql_scripts/: create_elements_table.sql  create_meta_tables.sql  create_station_to_region_table.sql  different_views_and_slices.sql  insert_all.sql  insert_daily.sql  tables_to_plot.sql
